# imu_firmware

temp-nrf53-imu-master/temp-nrf53-imu-master/: .clang-format  CMakeLists.txt  Makefile  nrf5340dk_nrf5340_cpuapp.overlay
temp-nrf53-imu-master/temp-nrf53-imu-master/src/: hid.h  main.c
temp-nrf53-imu-master/temp-nrf53-imu-master/src/imu/: KConfig  imu.c  imu.h
temp-nrf53-imu-master/temp-nrf53-imu-master/src/imu/drivers/Invn/EmbUtils/: DataConverter.h  Message.h
temp-nrf53-imu-master/temp-nrf53-imu-master/src/imu/drivers/imu/: inv_imu_driver.c  inv_imu_driver.h  inv_imu_selftest.c  inv_imu_selftest.h  inv_imu_transport.c
temp-nrf53-imu-master/temp-nrf53-imu-master/src/imu/include/: invn_algo_aml.h
temp-nrf53-imu/temp-nrf53-imu-master/: Kconfig  README.rst  prj.conf
temp-nrf53-imu/temp-nrf53-imu-master/src/: hid.c  main.c
temp-nrf53-imu/temp-nrf53-imu-master/src/imu/: CMakeLists.txt  imu.c
temp-nrf53-imu/temp-nrf53-imu-master/src/imu/drivers/Invn/EmbUtils/: ErrorHelper.h
temp-nrf53-imu/temp-nrf53-imu-master/src/imu/drivers/imu/: inv_imu_apex.h  inv_imu_defs.h
